<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a01"
    android:gravity="center"
    tools:context="com.cn.xp.weizhi.ui.login.act.LoginAct">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:background="@drawable/a02"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="62px">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="100px"
                android:text="@string/text_login_account_login"
                android:textColor="@color/black"
                android:textSize="34px" />

            <TextView
                android:id="@+id/tv_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="100px"
                android:text="@string/text_login_verification_login"
                android:textColor="@color/black"
                android:textSize="34px" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="92px"
            android:background="@drawable/a03">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="@drawable/a04" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_phone"
                android:background="@null"
                android:inputType="phone"
                android:textSize="32px"
                android:textColor="@color/white"
                android:hint="@string/edittext_login_phone_hint" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="30px"
            android:background="@drawable/a03">

            <ImageView
                android:id="@+id/iv_password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="@drawable/a05" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_password_icon"
                android:background="@null"
                android:textSize="32px"
                android:textColor="@color/white"
                android:hint="@string/edittext_login_password_hint" />

            <TextView
                android:id="@+id/tv_verificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/text_VerificationCode"
                android:textColor="@color/white"
                android:visibility="invisible" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="35dp"
            android:textSize="24px"
            android:text="@string/text_login_forgetpassword"
            android:textColor="@color/black"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60px"
            android:background="@drawable/a06"
            android:text="@string/btn_login"
            android:textSize="32px"
            android:textColor="#46A3FF" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/a06"
            android:text="@string/btn_register"
            android:textSize="32px"
            android:textColor="#46A3FF" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="40px"
                android:layout_marginTop="118px"
                android:layout_marginRight="50dp">

                <ImageView
                    android:id="@+id/iv_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/a07" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_wechat"
                    android:textSize="24px"
                    android:text="@string/text_wechatLogin" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="140px">

                <ImageView
                    android:id="@+id/iv_sina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/a08" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_sina"
                    android:textSize="24px"
                    android:text="@string/text_sinaLogin" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
