<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/a16"
    tools:context="com.cn.xp.weizhi.ui.login.act.RegisterAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50px"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/a06">
        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/a10"/>
        <EditText
            android:id="@+id/et_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_phone"
            android:layout_centerVertical="true"
            android:textSize="32px"
            android:background="@null"
            android:inputType="phone"
            android:hint="@string/edittext_login_phone_hint"/>
    </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30px"
            android:background="@drawable/a06">
            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/a12"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_password"
                android:layout_centerVertical="true"
                android:textSize="32px"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/text_inputPassword"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30px"
            android:background="@drawable/a06">
            <ImageView
                android:id="@+id/iv_confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/a12"/>
            <EditText
                android:id="@+id/et_confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_confirmPassword"
                android:layout_centerVertical="true"
                android:textSize="32px"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/edittext_login_password_hint"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30px"
            android:background="@drawable/a06">
            <ImageView
                android:id="@+id/iv_VerificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/a11"/>
            <EditText
                android:id="@+id/et_verificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/iv_VerificationCode"
                android:layout_centerVertical="true"
                android:textSize="32px"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/text_inputVerificationCode"/>
            <TextView
                android:id="@+id/tv_getVerificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textSize="24px"
                android:textColor="@color/black"
                android:text="@string/text_VerificationCode"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:background="@drawable/a06"
            android:textSize="32px"
            android:textColor="#46A3FF"
            android:text="@string/btn_register"/>

        <Button
            android:id="@+id/btn_existingAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:background="@drawable/a06"
            android:textSize="32px"
            android:textColor="#46A3FF"
            android:text="@string/btn_existingAccountCode"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:orientation="horizontal">
       <Button
           android:id="@+id/btn_agreement"
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:background="@drawable/radioselector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24px"
            android:text="@string/text_agreement"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
